   - Automates the destruction of GDI objects.
   - Automates the deletion or release of the device contexts.
   
* Added an immediate mode to CSplitter. There is now the choice of resizing
   the panes while the splitter bar is being dragged, or defer the resizing
   until the splitter bar drag is complete (as before).
   
* Added support for Borland Developer Studio 2006.

   
The following changes have been made to the Win32++ code:
Added CDC class 
Added CSplitter::SetImmediate
Added CSplitter::SetVertical
Added CWnd::GetDlgItemText
Added CWnd::GetWindowText
Added CWnd::SetDlgItemText
Added CWnd::SetWindowText

Changed CSplitter::CSplitter 	now requires no arguements

Incompatibilities with previous versions:
CSplitter now has a default constructor. This simplifies the use of CSplitter.
The following functions can be used to set the CSplitter paramerters:
* SetBarPos	sets the initial splitter bar position (default is 10)
* SetBarColor   sets the color of the splitter bar (default is rebar color)
* SetImmediate  sets immediate mode true or false (default is false)
* SetVertical   sets vertical bar mode true or false (default is true)
* SetWidth      sets the width of the splitter bar (default is 5)

Version 5.61
-----------
New Features
* Added support for Visual Studio 2008 and Visual Studio 2008 Express
* Better exception handling:
  - Any failure of 'new' now generates a bad_alloc exception
  - Exceptions are thrown when rebar messages such as RB_INSERTBAND fail.

Bug Fixes:
* The size of text in dropdown menus is calculated more accurately.

Version 5.6
-----------
Bug Fixes:
* MDI accelerators (like Ctrl+F6) now work
* Fixed notification reflection in CDialog
* Browser sample now compiles with VS 2005 Express

New Features:
* Added InitInstance to CWinApp. Code to create windows should now be
   placed in InitInstance instead of the constructor of the CWinApp
   derived class. Doing this allows the CWinApp derrived class to be